--- a/app/src/main/res/layout/title_shopping.xml
+++ b/app/src/main/res/layout/title_shopping.xml
@@ -10,7 +10,7 @@
             android:layout_alignParentLeft="true"
             android:padding="10dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_back"
+            android:src="@mipmap/ic_launcher"
             android:contentDescription="返回" />
 
     <TextView
@@ -28,7 +28,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/cart" />
+            android:src="@mipmap/ic_launcher" />
 
     <TextView
             android:id="@+id/tv_count"
